/*
 * JavaFX + Gradle + jpackage
 * Windows (.exe) & Linux (app-image)
 */

plugins {
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.1.0'
}

group = "net.chrupki"
version = "1.0.0"

repositories {
    mavenCentral()
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

javafx {
    version = "21"
    modules = [
            "javafx.controls",
            "javafx.fxml"
    ]
}

dependencies {
    implementation 'org.xerial:sqlite-jdbc:3.45.1.0'
}

application {
    mainClass = "net.chrupki.Patcher"
}

tasks.jar {
    manifest {
        attributes(
                "Main-Class": application.mainClass
        )
    }
}

tasks.register('packageApp', Exec) {
    group = "distribution"
    description = "Create native app using jpackage"

    commandLine(
            "jpackage",
            "--name", "Patcher",
            "--input", "build/libs",
            "--main-jar", jar.archiveFileName.get(),
            "--main-class", application.mainClass.get(),
            "--dest", "build/jpackage",
            "--type", "app-image",
            "--module-path", configurations.runtimeClasspath.asPath,
            "--add-modules", "javafx.controls,javafx.fxml",
    )
}



